fix: white space at bottom in mobile browser

--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -1,5 +1,5 @@
 .header {
-  position: absolute;
+  position: relative;
   top: 2rem;
   z-index: 1;
   display: flex;
