--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -7,6 +7,13 @@
   font-family: "Raleway", sans-serif;
 }
 
+html,
+body {
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
+}
+
 a {
   color: inherit;
   text-decoration: none;
